updated terms of service and privacy policy

--- a/terms-of-service.html
+++ b/terms-of-service.html
@@ -1,17 +1,26 @@
 <html>
   <head>
-    <title>Sakay.ph Terms of Service</title>
+    <title>Sakay.ph Terms of Service and Privacy Policy</title>
     <link rel="stylesheet" href="/css/styles.css">
+    <style>
+      a {
+        color: #D64933;
+        text-decoration: none;
+      }
+      h1 span {
+        font-style: italic;
+      }
+    </style>
   </head>
-  <body>
+  <body class="tos">
     <header>
       <div class="pad container">
-        <h1>Sakay.ph <span>Terms of Service</span></h1>
+        <h1>Sakay.ph <span>Terms of Service</span> and <span>Privacy Policy</span></h1>
       </div>
     </header>
     <article style="line-height: 24px;">
       <div class="pad container">
-        <p>By using or visiting Sakay.ph or any of its related applications and services, including Traincheck, you agree to be bound by the terms and conditions below.</p>
+        <p>By using <a href="https://sakay.ph">Sakay.ph</a> or any of its related applications and services, including <a href="https://traincheck.sakay.ph">Traincheck</a>, <a href="http://lite.sakay.ph">Sakay.ph Lite</a> for Free Basics, and the mobile apps for <a href="https://itunes.apple.com/ph/app/sakay.ph/id937998546?mt=8&uo=4">iOS</a> and <a href="https://play.google.com/store/apps/details?id=com.byimplication.sakay">Android</a>, you agree to be bound by the terms and conditions below.</p>
 
         <p>These Terms of Service can be modified as necessary, at any time.</p>
 
@@ -34,6 +43,12 @@
         <h2>Data Collection</h2>
 
         <p>Sakay.ph reserves the right to collect anonymized information about your usage of our services. This includes but is not limited to location data, usage patterns, cookies, and information typed into fields. You consent that data gathered from or submitted by you can be used for By Implication / Sakay.ph may be used for improving its services and commercial purposes. Any information that we collect is anonymized and does not include personally identifying information.</p>
+
+        <h2>Use of Location Data in Mobile Apps</h2>
+
+        <p>The Sakay.ph mobile apps for iPhone and Android may use your location as provided by GPS, cell-towers, or wi-fi. This use of your location is opt-in and you may choose not to provide your location by adjusting your phone's privacy settings.</p>
+
+        <p>For the purposes of providing direction information, we use this data to show and update your location on the map, and as a shortcut for setting origin or destination. Our analytics may also collect your location in a non-identifiable, anonymized manner in aggregate for use as described in the previous section, but individual searches are not associated with your location.</p>
       </div>
     </article>
   </body>
